--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="assets/javascript/app.js" ></script>
     
 
-    <title>Bootstrap Starter Template</title>
+    <title>Trivia Game Start Page</title>
   </head>
   <body >
 
@@ -24,36 +24,15 @@
           <div class="col-12 contentHolder">
               <h1 class="elegantshadow my-2">Totally Trivial Trivia</h1>
               <div class="row justify-content-center">
-                  <div class="col-6">
-                      <div class="alert alert-danger" id="time">
-                        <h4>Time remaining: <span class="badge badge-secondary ml-2" id="timeRemaining"></span></h4>
-                      </div>      
-                  </div>
-              </div>
-              <div class="row">
-                  <div class="col-12">
-                    <div class="alert alert-success" role="alert">
-                      <h4 class="alert-heading">Well done!</h4>
-                      <p>Aww yeah, you successfully read this important alert message. This example text is going to run a bit longer so that you can see how spacing within an alert works with this kind of content.</p>
-                      <hr>
-                      <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
-                    </div>
-                  </div>
+                <div class="col-12 col-sm-6 my-3" id="startPic">
+                   <img src="assets/images/giphy.gif"  class="img-fluid">
+                </div>
               </div>
               <div class="row justify-content-center">
-                  <div class="col-4" id="answer">
-                    <div class="form-group">
-                      <label for="exampleFormControlSelect2">Options...</label>
-                      <select size="5" class="form-control" id="exampleFormControlSelect2">
-                        <option>Answer 1</option>
-                        <option>Answer 2</option>
-                        <option>Answer 3</option>
-                        <option>Answer 4</option>
-                        <option>Answer 5</option>
-                      </select>
-                    </div>
+                  <div class="col-6 my-3" id="startBtn">
+                    <button type="button" class="btn btn-primary btn-lg btn-block" id="startButton">Start Game</button>     
                   </div>
-              </div>
+              </div>  
           </div>
       </div>  
     </div>
