--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 </div>
               </div>
               <div class="row justify-content-center">
-                  <div class="col-6 my-3" id="startBtn">        
-                    <button type="button" class="btn btn-primary btn-lg btn-block" id="startButton">Start Game</button>     
+                  <div class="col-4 my-3" id="startBtn">        
+                    <button type="button" class="btn btn-primary btn-sm btn-block" id="startButton">Start Game</button>     
                   </div>
               </div>  
           </div>
