--- a/start.html
+++ b/start.html
@@ -41,23 +41,16 @@
               <div class="row justify-content-center">
                   <div class="col-4 my-2" id="image">
                       <div class="form">
-                          <div class="form-group">
+                          <div class="form-group" id="options">
                               <label for="options">Select your answer ...</label>
-                              <select size="4" class="form-control" id="options">
+                              <select size="4" class="form-control" id="mySelect">
                                  
                               </select>
                           </div>
                       </div>
                   </div>
               </div>
-              <div class="row my-1 align-items-center justify-content-center">
-                  <div class="col-12 col-md-3 mb-0" >
-                      <div class="text-center" id="playAgain"></div> 
-                  </div>
-                  <div class="col-12 col-md-3 mb-0" >
-                      <div class="text-center ml-auto" id="resetGame"></div> 
-                  </div>
-              </div>
+              
               <div class="row my-1 justify-content-center">
                 <!-- <div class="col-12" id="selectedOption"></div> -->
                 <div class="col-4" id="messages"></div>
@@ -65,6 +58,14 @@
               <div class="row justify-content-center">
                   <div class="col-8" id="answer"></div>   
               </div>
+              <div class="row my-1 align-items-center justify-content-center">
+                <div class="col-12 col-md-3 mb-0" >
+                    <div class="text-center" id="playAgain"></div> 
+                </div>
+                <div class="col-12 col-md-3 mb-0" >
+                    <div class="text-center ml-auto" id="resetGame"></div> 
+                </div>
+            </div>
               <div class="row justify-content-center" >
                 <div class="col-12 col-md-4  p-2" id="results">
                   <div class="row">
