Fix bug with answered total
Signed-off-by: Julio Bell <juliobell2014@gmail.com>

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               </div>
               <div class="row justify-content-center">
                   <div class="col-4 my-3" id="startBtn">        
-                    <button type="button" class="btn btn-primary btn-sm btn-block" id="startButton">Start Game</button>     
+                    <button type="button" class="btn btn-primary btn-sm btn-block" id="startButton">Start Quiz</button>     
                   </div>
               </div>  
           </div>
