more font styling
Signed-off-by: Julio Bell <juliobell2014@gmail.com>

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container mt-3 p-2" id="boxshadow">
       <div class="row showCase">
           <div class="col-12 contentHolder">
-              <h1 class="elegantshadow my-2">Totally Trivial Trivia</h1>
+              <h1 class="retroshadow3 my-2">Totally Trivial Trivia</h1>
               <div class="row justify-content-center">
                 <div class="col-12 col-sm-6 my-3" id="startPic">
                    <img src="assets/images/giphy.gif"  class="img-fluid">
@@ -32,7 +32,7 @@
               </div>
               <div class="row justify-content-center">
                   <div class="col-4 my-3" id="startBtn">        
-                    <button type="button" class="btn btn-primary btn-sm btn-block" id="startButton">Start Quiz</button>     
+                    <button type="button" class="btn btn-primary btn-sm btn-block" id="startButton"><h3>Start Quiz</h3></button>     
                   </div>
               </div>  
           </div>
