--- a/start.html
+++ b/start.html
@@ -25,7 +25,7 @@
     <div class="container mt-3 p-2" id="boxshadow">
       <div class="row showCase">
           <div class="col-12 contentHolder">
-              <h1 class="elegantshadow my-2">Totally Trivial Trivia</h1>
+              <h1 class="my-2 retroshadow3">Totally Trivial Trivia</h1>
               <div class="row justify-content-center">
                   <div class="col-6">
                       <div class="alert alert-light " id="timer">
